crates/elm-client-gen-derive-tests/tests/compile_fail/missing_module.rs
use elm_client_gen_core::ElmType;

#[derive(ElmType)]
pub struct NoModule {
    pub id: String,
}

fn main() {}
