crates/elm-client-gen-derive-tests/tests/compile_fail/missing_module.stderr
error: missing #[elm(module = "...")] attribute
 --> tests/compile_fail/missing_module.rs:4:12
  |
4 | pub struct NoModule {
  |            ^^^^^^^^
